--- a/다이어리/diary-detail.css
+++ b/다이어리/diary-detail.css
@@ -11,14 +11,13 @@ html {
 .layout-wrapper {
   background: #fff;
   max-width: 1920px;
-  height: 1080px;
   display: flex;
   justify-content: center;
   margin: 0 auto;
 }
 
 .layout {
-  width: 1168px;
+  width: 61%;
   height: auto;
   display: flex;
   padding: 0 20px;
@@ -28,7 +27,6 @@ html {
 }
 
 .header {
-  width: 100%;
   height: auto;
   display: flex;
   padding: 0 2px;
@@ -40,8 +38,6 @@ html {
 .header_frame {
   display: flex;
   height: 60px;
-  min-width: 320px;
-  max-width: 1168px;
   align-items: center;
   gap: 10px;
   align-self: stretch;
@@ -66,7 +62,6 @@ html {
 }
 
 .main {
-  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -78,7 +73,6 @@ html {
 
 .main_frame {
   display: flex;
-  max-width: 1168px;
   height: auto;
   padding-bottom: 16px;
   flex-direction: column;
@@ -90,8 +84,6 @@ html {
 .title_frame {
   display: flex;
   height: auto;
-  max-width: 1168px;
-  min-width: 380px;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
@@ -100,7 +92,6 @@ html {
 
 .title {
   display: flex;
-  max-width: 1168px;
   padding-bottom: 12px;
   align-items: center;
   gap: 10px;
@@ -116,7 +107,6 @@ html {
 
 .emotion_date_frame {
   display: flex;
-  max-width: 1168px;
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
@@ -182,7 +172,6 @@ html {
 
 .content_frame {
   display: flex;
-  max-width: 1168px;
   height: auto;
   flex-direction: column;
   align-items: flex-start;
@@ -212,7 +201,6 @@ html {
 
 .diary_action_container {
   display: flex;
-  max-width: 1168px;
   justify-content: flex-end;
   align-items: center;
   gap: 16px;
@@ -227,9 +215,9 @@ html {
   align-items: flex-start;
   gap: 10px;
   border-radius: 8px;
-  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
-  background: var(--Gray-W, #FFF);
-  color: var(--Gray-Gray-900, #1C1C1C);
+  border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+  background: var(--Gray-W, #fff);
+  color: var(--Gray-Gray-900, #1c1c1c);
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
@@ -239,9 +227,13 @@ html {
   text-decoration: none;
 }
 
+.comment_header_container {
+  width: 100%;
+}
+
 .comment_container {
   display: flex;
-  max-width: 1168px;
+  width: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
@@ -261,22 +253,23 @@ html {
   align-items: center;
   gap: 16px;
   padding-bottom: 4px;
-  width: 1130px;
+  width: 100%;
 }
 
-#comment_input{
+#comment_input {
   display: flex;
   padding: 12px 16px;
   align-items: center;
   gap: 10px;
   flex: 1 0 0;
   border-radius: 8px;
-  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
-  background: var(--Gray-W, #FFF);
+  border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+  background: var(--Gray-W, #fff);
+  width: 100%;
 }
 
 .comment_input::placeholder {
-  color: var(--Gray-Gray-400, #ABABAB);
+  color: var(--Gray-Gray-400, #ababab);
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -294,7 +287,7 @@ html {
   gap: 10px;
   border-radius: 8px;
   background: var(--Gray-B, #000);
-  color: var(--Gray-W, #FFF);
+  color: var(--Gray-W, #fff);
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
@@ -331,5 +324,5 @@ html {
 .comment_divider {
   width: 1168px;
   height: 1px;
-  background: var(--Gray-Gray-100, #E4E4E4);
+  background: var(--Gray-Gray-100, #e4e4e4);
 }
