--- a/section03/css/index.css
+++ b/section03/css/index.css
@@ -70,7 +70,6 @@
 }
 
 .panel-list {
-  flex-grow: 1;
   gap: var(--gap-lg);
   align-items: flex-start;
 }
@@ -84,7 +83,7 @@
 }
 
 .panel-item {
-  width: 48.4%;
+  max-width: 380px;
   transition: all 0.5s ease-out;
   border-radius: var(--radius-md);
   position: relative;
@@ -117,6 +116,8 @@
 .emotion-card {
   width: 100%;
   height: 100%;
+  border-radius: var(--radius-md);
+  overflow: hidden;
 }
 
 .panel-info {
@@ -169,4 +170,30 @@
   color: var(--gray-50);
   background-color: var(--gray-300);
   cursor: not-allowed;
+}
+
+@media (max-width: 1190px) {
+  .panel-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 360px) {
+  .panel-list {
+    min-width: 320px;
+  }
+
+  .panel-item {
+    max-width: 148px;
+  }
+
+  .emotion-card {
+    height: 285px;
+  }
+
+  .emotion-card img {
+    object-fit: cover;
+    height: 100%;
+  }
 }
