[240903] [수정] CSS: 전체 - 메인 페이지 모바일 환경에서 필터 위치 구현 방식 수정

--- a/01-diary/index_mobile.css
+++ b/01-diary/index_mobile.css
@@ -1,6 +1,6 @@
 @media (max-width: 779px) {
     .filter_item {
-        order: 3;
+        order: 2;
 
         padding: 0;
     }
@@ -14,11 +14,17 @@
     }
 
     .contents {
-        flex-direction: column;
+        display: contents;
+        
+    }
+
+    .contents_container {
+        /* display: contents; */
+        padding: 0px 20px 0px 20px;
     }
 
     .contents_left_item {
-        order: 4;
+        order: 3;
 
         width: 100%;
 
