💄 style: 공통 부분 common.css로 분리 및 disabled 스타일 추가

--- a/section03/css/common.css
+++ b/section03/css/common.css
@@ -233,6 +233,84 @@ body {
   min-height: 128px;
 }
 
+.review {
+  padding: var(--gap-lg) 0;
+  border-top: 1px solid var(--gray-b);
+}
+
+.review legend {
+  font-size: 18px;
+  font-weight: var(--weight-semi-bold);
+}
+
+.review-area {
+  padding-top: 13px;
+  padding-bottom: var(--gap-sm);
+  gap: var(--gap-sm);
+  justify-content: space-between;
+}
+
+.input-review {
+  padding: var(--gap-xs) var(--gap-sm);
+  flex-grow: 1;
+  max-width: 1100px;
+  height: 48px;
+  border-radius: var(--radius-sm);
+  border: 1px solid var(--gray-200);
+  background-color: var(--gray-w);
+  font-size: 16px;
+  font-weight: var(--weight-medium);
+}
+
+.input-review:disabled {
+  color: var(--gray-400);
+  background-color: var(--gray-50);
+  border: none;
+}
+
+.button-add-review {
+  width: 50px;
+  height: 48px;
+  color: var(--gray-w);
+  background-color: var(--gray-b);
+  border-radius: var(--radius-sm);
+  font-size: 18px;
+  font-weight: var(--weight-semi-bold);
+}
+
+.button-add-review:disabled {
+  color: var(--gray-w);
+  background-color: var(--gray-300);
+  border: none;
+  cursor: not-allowed;
+}
+
+.review-item {
+  width: 100%;
+  gap: var(--gap-xs);
+  font-size: 16px;
+  padding-bottom: var(--gap-xs);
+  padding-top: var(--gap-xs);
+  border-bottom: 1px solid var(--gray-100);
+}
+
+.review-item:first-child {
+  padding-top: 0;
+}
+
+.review-item:last-child {
+  border: none;
+}
+
+.review-item-content {
+  font-weight: var(--weight-medium);
+}
+
+.review-date {
+  color: var(--gray-600);
+  font-weight: var(--weight-regular);
+}
+
 .footer {
   width: 100%;
   background-color: var(--gray-50);
