--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+    margin: 0rem;
+    padding: 0rem;
 }
 
 .header {
@@ -9,15 +9,15 @@
     display: flex;
     justify-content: center;
 
-    padding: 0px 20px 0px 20px;
+    padding: 0rem 1.25rem 0rem 1.25rem;
 }
 
 .header_title {
-    width: 1168px;
+    width: 73rem;
     height: 60px;
 
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.125rem;
 
     display: flex;
     align-items: center;
@@ -28,11 +28,11 @@
     display: flex;
     justify-content: center;
 
-    padding: 0px 20px 0px 20px;
+    padding: 0px 1.25rem 0px 1.25rem;
 }
 
 .banner_img {
-    width: 1168px;
+    width: 73rem;
     height: 240px;
 }
 
@@ -49,11 +49,11 @@
     justify-content: center;
     gap: 32px;
 
-    padding: 0px 20px 0px 20px;
+    padding: 0px 1.25rem 0px 1.25rem;
 }
 
 .navi_items {
-    width: 1168px;
+    width: 73rem;
     height: 48px;
 
     display: flex;
@@ -91,7 +91,7 @@
     position: sticky;
     top: 10px;
     z-index: 10;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 1.25rem 0px 1.25rem;
 }
 
 .mood_select_box {
@@ -108,7 +108,7 @@
     display: flex;
     gap: 24px;
 
-    padding: 0px 20px 0px 20px;
+    padding: 0px 1.25rem 0px 1.25rem;
 }
 
 .contents_left_item {
