--- a/css/detail.css
+++ b/css/detail.css
@@ -2,8 +2,8 @@
   min-height: 60vh;
   display: flex;
   flex-direction: column;
-  gap: 24px;
-  padding: 50px 0;
+  gap: 1.5rem;
+  padding: 3.125rem 0;
 }
 .detailWrap h2 {
   border-bottom: 2px solid #000;
@@ -19,12 +19,12 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: 600;
 }
 .detailWrap .detailInfo .moodType .moodTypeImg {
-  width: 32px;
-  height: 32px;
+  width: 2rem;
+  height: 2rem;
 }
 .detailWrap .detailInfo .detailDate {
   display: flex;
@@ -62,34 +62,4 @@
   border: 1px solid var(--border-color-1);
   border-radius: 8px;
   white-space: nowrap;
-}
-
-.commentWrap .commentInputWrap {
-  display: flex;
-  align-items: stretch;
-  gap: 16px;
-  padding: 13px 0;
-}
-.commentWrap .commentInputWrap #commentInput {
-  width: 100%;
-  height: 48px;
-  border-radius: 8px;
-  border: 1px solid var(--border-color-1);
-  padding: 12px 16px;
-}
-.commentWrap .commentList {
-  display: flex;
-  flex-direction: column;
-}
-.commentWrap .commentList ul li {
-  display: flex;
-  gap: 12px;
-  border-bottom: 1px solid var(--border-color-1);
-  padding: 12px 0;
-}
-.commentWrap .commentList ul li:last-child {
-  border-bottom: none;
-}
-.commentWrap .commentList ul li .commentDate {
-  color: var(--font-color-7);
 }/*# sourceMappingURL=detail.css.map */
