--- a/css/detail.scss
+++ b/css/detail.scss
@@ -2,8 +2,8 @@
   min-height: 60vh;
   display: flex;
   flex-direction: column;
-  gap: 24px;
-  padding: 50px 0;
+  gap: 1.5rem;
+  padding: 3.125rem 0;
 
   h2 {
     border-bottom: 2px solid #000;
@@ -19,12 +19,12 @@
       display: flex;
       align-items: center;
       gap: 4px;
-      font-size: 20px;
+      font-size: 1.25rem;
       font-weight: 600;
 
       .moodTypeImg {
-        width: 32px;
-        height: 32px;
+        width: 2rem;
+        height: 2rem;
       }
     }
 
@@ -68,43 +68,4 @@
   border: 1px solid var(--border-color-1);
   border-radius: 8px;
   white-space: nowrap;
-}
-
-.commentWrap {
-  .commentInputWrap {
-    display: flex;
-    align-items: stretch;
-    gap: 16px;
-    padding: 13px 0;
-
-    #commentInput {
-      width: 100%;
-      height: 48px;
-      border-radius: 8px;
-      border: 1px solid var(--border-color-1);
-      padding: 12px 16px;
-    }
-  }
-
-  .commentList {
-    display: flex;
-    flex-direction: column;
-
-    ul {
-      li {
-        display: flex;
-        gap: 12px;
-        border-bottom: 1px solid var(--border-color-1);
-        padding: 12px 0;
-
-        &:last-child {
-          border-bottom: none;
-        }
-
-        .commentDate {
-          color: var(--font-color-7);
-        }
-      }
-    }
-  }
 }
