--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,19 @@
   z-index: 20;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
-  padding: 32px 0 42px;
+  padding: 2rem 0 2.625rem;
   transition: 0.5s;
 }
 .navBottom.stickyAddStyle {
-  padding: 10px 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .navBottom.stickyAddStyle .filterSearchBox {
   filter: invert(1);
 }
 
 .filterSearchBox {
-  width: var(--width);
+  width: var(--max-width);
   margin: 0 auto;
   display: flex;
   gap: 8px;
@@ -25,7 +26,7 @@
   flex-wrap: wrap;
 }
 .filterSearchBox .selectBox {
-  width: 120px;
+  width: 7.5rem;
   height: 48px;
   border: 1px solid var(--border-color-2);
   border-radius: 8px;
@@ -76,7 +77,7 @@
   background-position: 90% center;
 }
 .filterSearchBox .searchBox {
-  width: 340px;
+  width: 21.25rem;
   height: 48px;
   border-radius: 48px;
   background-color: #fff;
@@ -90,7 +91,7 @@
   justify-content: flex-start;
 }
 .filterSearchBox .searchBox .selectBox {
-  width: 110px;
+  width: 6.875rem;
   border: none;
   flex-shrink: 0;
   height: 100%;
@@ -133,12 +134,12 @@
 section {
   display: flex;
   gap: 24px;
-  align-items: flex-start;
   flex-wrap: wrap;
-  justify-content: space-around;
+  align-items: flex-start;
   padding-bottom: 40px;
 }
 section .empty {
+  width: 784px;
   text-align: center;
   padding: 20vh;
   color: var(--font-color-6);
@@ -150,11 +151,13 @@ section .diaryList {
 section .diaryList ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 1.5rem;
 }
 section .diaryList ul li {
-  width: 380px;
   position: relative;
+}
+section .diaryList ul li a {
+  display: block;
 }
 section .diaryList ul li:hover {
   transform: scale(1.02);
@@ -180,8 +183,8 @@ section .diaryList ul li:hover img {
 }
 section .diaryList ul li .closeBtn {
   position: absolute;
-  top: 12px;
-  right: 12px;
+  top: 5px;
+  right: 5px;
   z-index: 10;
   border: none;
   background: none;
@@ -192,12 +195,13 @@ section .diaryList ul li figure {
   gap: 16px;
   padding-bottom: 16px;
 }
-section .diaryList ul li figure div {
+section .diaryList ul li figure .imgBox {
   border-radius: 20px;
   overflow: hidden;
 }
-section .diaryList ul li figure div img {
+section .diaryList ul li figure .imgBox img {
   display: block;
+  width: 100%;
 }
 section .diaryList ul li figure .imgBox_1 {
   background-color: var(--mood-color-1);
