--- a/css/edit.scss
+++ b/css/edit.scss
@@ -1,6 +1,6 @@
 .editWrap .diaryWrite {
   border: none;
-  width: 100%;
+  max-width: 100%;
   gap: 24px;
   padding: 50px 0;
 
@@ -30,4 +30,33 @@
       }
     }
   }
+}
+
+.whiteBtn {
+  background-color: #fff;
+  color: var(--font-color-8);
+  font-weight: 500;
+  padding: 8px 10px;
+  border: 1px solid var(--border-color-1);
+  border-radius: 8px;
+}
+
+.blackBtn {
+  background-color: var(--font-color-8);
+  color: #fff;
+  font-weight: 500;
+  padding: 8px 10px;
+  border: 1px solid var(--border-color-1);
+  border-radius: 8px;
+  white-space: nowrap;
+}
+
+.grayBtn {
+  background-color: #c7c7c7;
+  color: #fff;
+  font-weight: 500;
+  padding: 8px 10px;
+  border: 1px solid var(--border-color-1);
+  border-radius: 8px;
+  white-space: nowrap;
 }
