--- a/css/index.scss
+++ b/css/index.scss
@@ -22,15 +22,15 @@
   --border-color-1: #d4d3d3;
   --border-color-2: #c7c7c7;
 
-  --font-size-1: 14px;
-  --font-size-2: 18px;
-  --font-size-3: 20px;
-  --font-size-4: 24px;
+  --font-size-1: 0.875rem;
+  --font-size-2: 1.125rem;
+  --font-size-3: 1.25rem;
+  --font-size-4: 1.5rem;
 
   --font-family: "Pretendard", -apple-system, BlinkMacSystemFont,
     "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
 
-  --width: 1168px;
+  --max-width: 73rem; // 1168px
 }
 
 * {
@@ -52,6 +52,10 @@ button {
   cursor: pointer;
 }
 
+img {
+  vertical-align: top;
+}
+
 .blind {
   position: absolute;
   width: 1px;
@@ -64,7 +68,7 @@ button {
 }
 
 .scrollBox {
-  width: var(--width);
+  width: var(--max-width);
   margin: 0 auto;
   position: fixed;
   left: 50%;
@@ -104,17 +108,21 @@ button {
     clip-path: inset(0 -34% 0 0);
   }
 }
-
+html {
+  font-size: 16px;
+}
 html,
+body {
+  color: #000;
+  letter-spacing: -0.1px;
+  padding-bottom: var(--footerHeight);
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-family);
   font-size: var(--font-size-1);
-  color: #000;
-  letter-spacing: -0.1px;
-  height: auto;
-  min-height: 100%;
-  padding-bottom: var(--footerHeight);
-  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 header,
@@ -124,7 +132,7 @@ nav,
 .headerBanner,
 .detailWrap,
 .editWrap {
-  max-width: var(--width);
+  max-width: var(--max-width);
   margin: 0 auto;
 }
 
@@ -196,7 +204,7 @@ footer {
 }
 
 .diaryWrite {
-  width: 360px;
+  max-width: 22.5rem;
   border-radius: 16px;
   border: 1px solid var(--border-color-1);
   padding: 24px;
@@ -308,4 +316,17 @@ footer {
   color: var(--font-color-6);
   font-size: 16px;
   font-weight: 500;
+}
+
+#suneditor_editArea {
+  width: 100% !important;
+}
+
+.detailHeaderTop {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  height: 3.25rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
