--- a/css/index.css
+++ b/css/index.css
@@ -19,13 +19,13 @@
   --mood-color-5: #ead2f9;
   --border-color-1: #d4d3d3;
   --border-color-2: #c7c7c7;
-  --font-size-1: 14px;
-  --font-size-2: 18px;
-  --font-size-3: 20px;
-  --font-size-4: 24px;
+  --font-size-1: 0.875rem;
+  --font-size-2: 1.125rem;
+  --font-size-3: 1.25rem;
+  --font-size-4: 1.5rem;
   --font-family: "Pretendard", -apple-system, BlinkMacSystemFont,
     "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
-  --width: 1168px;
+  --max-width: 73rem;
 }
 
 * {
@@ -47,6 +47,10 @@ button {
   cursor: pointer;
 }
 
+img {
+  vertical-align: top;
+}
+
 .blind {
   position: absolute;
   width: 1px;
@@ -59,7 +63,7 @@ button {
 }
 
 .scrollBox {
-  width: var(--width);
+  width: var(--max-width);
   margin: 0 auto;
   position: fixed;
   left: 50%;
@@ -102,16 +106,22 @@ button {
             clip-path: inset(0 -34% 0 0);
   }
 }
+html {
+  font-size: 16px;
+}
+
 html,
+body {
+  color: #000;
+  letter-spacing: -0.1px;
+  padding-bottom: var(--footerHeight);
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-family);
   font-size: var(--font-size-1);
-  color: #000;
-  letter-spacing: -0.1px;
-  height: auto;
-  min-height: 100%;
-  padding-bottom: var(--footerHeight);
-  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 header,
@@ -121,7 +131,7 @@ nav,
 .headerBanner,
 .detailWrap,
 .editWrap {
-  max-width: var(--width);
+  max-width: var(--max-width);
   margin: 0 auto;
 }
 
@@ -187,7 +197,7 @@ footer .footerInner {
 }
 
 .diaryWrite {
-  width: 360px;
+  max-width: 22.5rem;
   border-radius: 16px;
   border: 1px solid var(--border-color-1);
   padding: 24px;
@@ -290,4 +300,17 @@ footer .footerInner {
   color: var(--font-color-6);
   font-size: 16px;
   font-weight: 500;
+}
+
+#suneditor_editArea {
+  width: 100% !important;
+}
+
+.detailHeaderTop {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  height: 3.25rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }/*# sourceMappingURL=index.css.map */
