--- a/01-diary/detail/detail_update.css
+++ b/01-diary/detail/detail_update.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 64px;
+    gap: 4rem;
 
-    padding: 0px 20px 0px 20px;
+    padding: 0px 1.25rem 0px 1.25rem;
 }
 
 .home_link {
@@ -12,120 +12,120 @@
 }
 
 .header_title {
-    width: 1168px;
-    height: 40px;
+    width: 73rem;
+    height: 2.5rem;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.125rem;
     color: black;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
 
-    gap: 10px;
+    gap: 0.625rem;
 }
 
 .section_container {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 1.5rem;
 }
 
 .update_contents_container {
-    width: 1168px;
+    width: 73rem;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1rem;
 }
 
 .update_main_contents_title {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.25rem;
     color: black;
 }
 
 .update_select_mood_container {
-    width: 592px;
+    width: 37rem;
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .select_mood {
     display: flex;
     justify-items: center;
     align-items: center;
-    gap: 8px;
+    gap: 0.5rem;
 }
 
 .select_mood_radio {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .select_mood_label {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.125rem;
     color: #333333;
 }
 
 .update_contents_title_container {
-    width: 1168px;
+    width: 73rem;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.5rem;
 }
 
 .update_contents_title {
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #333333;
 }
 
 #update_title_input {
-    border: 1px solid #D4D3D3;
-    border-radius: 8px;
-    padding: 12px 16px 12px 16px;
+    border: 0.625rem solid #D4D3D3;
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem 0.75rem 1rem;
 }
 
 .update_contents_text_container {
-    width: 1168px;
+    width: 73rem;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.5rem;
 }
 
 #update_contents_title {
-    border: 1px solid #D4D3D3;
-    border-radius: 8px;
+    border: 0.0625rem solid #D4D3D3;
+    border-radius: 0.5rem;
 
-    padding: 12px 16px 12px 16px;
+    padding: 0.75rem 1rem 0.75rem 1rem;
 }
 
 #update_contents_text {
-    border: 1px solid #D4D3D3;
-    border-radius: 8px;
+    border: 0.0625rem solid #D4D3D3;
+    border-radius: 0.5rem;
 
-    padding: 12px 16px 12px 16px;
+    padding: 0.75rem 1rem 0.75rem 1rem;
 }
 
 .main_contents_button_container {
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 0.625rem;
 
-    border-bottom: 1px solid black;
-    padding-bottom: 16px;
+    border-bottom: 0.0625rem solid black;
+    padding-bottom: 1rem;
 }
 
 .button {
-    width: 104px;
-    height: 48px;
+    width: 6.5rem;
+    height: 3rem;
 
-    border: 1px solid black;
-    border-radius: 8px;
+    border: 0.0625rem solid black;
+    border-radius: 0.5rem;
 
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1.125rem;
 
     color: #1C1C1C;
 
@@ -142,42 +142,42 @@
 }
 
 .reminiscence_container {
-    width: 1168px;
+    width: 73rem;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1rem;
 }
 
 .reminiscence_container_items {
     display: flex;
     flex-direction: column;
-    gap: 13px;
+    gap: 0.8125rem;
 }
 
 .reminiscence_title {
     width: 100%;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1.125rem;
     color: black;
 }
 
 .reminiscence_input_container {
-    height: 48px;
+    height: 3rem;
     display: flex;
-    gap: 10px;
+    gap: 0.625rem;
 }
 
 .reminiscence_text {
-    width: 1101px;
+    width: 68.8125rem;
     background-color: #F2F2F2;
     color: #ABABAB;
 
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
 
     border: 1px solid #D4D3D3;
-    border-radius: 8px;
-    padding: 12px 16px 12px 16px;
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem 0.75rem 1rem;
 }
 
 .reminiscence_text::placeholder {
@@ -185,46 +185,46 @@
 }
 
 .reminiscence_input_button {
-    width: 51px;
+    width: 3.1875rem;
     height: 100%;
     background-color: #C7C7C7;
 
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1.125rem;
 
     color: white;
 
     border: none;
-    border-radius: 8px;
+    border-radius: 0.5rem;
 }
 
 .reminiscence_list_container {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 0.75rem;
 }
 
 .reminiscence_list_container_items {
     width: 100%;
     display: flex;
-    gap: 12px;
+    gap: 0.75rem;
 }
 
 .reminiscence_list_item_text {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     color: black;
 }
 
 .reminiscence_list_item_date {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1rem;
     color: #777777;
 }
 
 .break_line {
     width: 100%;
-    height: 1px;
-    border: 1px solid #E4E4E4;
+    height: 0.0625rem;
+    border: 0.0625rem solid #E4E4E4;
 }
