중복되는 css 삭제

--- a/css/main.scss
+++ b/css/main.scss
@@ -107,9 +107,9 @@
       height: 100%;
     }
 
-    .searchPopBtn {
-      height: 100%;
-    }
+    // .searchPopBtn {
+    //   height: 100%;
+    // }
 
     input[type="search"] {
       border: none;
