--- a/css/media.scss
+++ b/css/media.scss
@@ -1,50 +1,56 @@
 @media (max-width: 900px) {
-  section .empty {
-    width: 100%;
-    padding: 0;
-    min-height: 20vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    background-color: #f2f2f2;
-    border-radius: 8px;
-  }
   section {
     padding: 40px 0;
+
     .diaryList {
       width: 100%;
       max-width: 100%;
+
       ul {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+
+        li {
+          figure .imgBox {
+            height: 17.8125rem;
+            position: relative;
+
+            img {
+              width: auto;
+              height: 100%;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+            }
+          }
+
+          &:hover {
+            img {
+              animation: none;
+            }
+          }
+        }
       }
     }
+
+    .empty {
+      width: 100%;
+      padding: 0;
+      min-height: 20vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      background-color: #f2f2f2;
+      border-radius: 8px;
+    }
   }
+
   .diaryWrite {
     order: -1;
     max-width: 100%;
     width: 100%;
-  }
-
-  section .diaryList ul li:hover {
-    img {
-      animation: none;
-    }
-  }
-
-  section .diaryList ul li figure .imgBox {
-    height: 17.8125rem;
-    position: relative;
-
-    img {
-      width: auto;
-      height: 100%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
   }
 
   .navBottom {
@@ -53,13 +59,11 @@
     .filterSearchBox {
       display: grid;
       grid-template-columns: 1fr 3fr;
-    }
-  }
 
-  .filterSearchBox {
-    .selectBox,
-    .searchBox {
-      width: auto;
+      .selectBox,
+      .searchBox {
+        width: auto;
+      }
     }
   }
 
@@ -88,22 +92,24 @@
     border-radius: 0;
   }
 
+  .detailWrap h2 {
+    font-size: 1rem;
+  }
   .detailWrap .buttonWrap {
     gap: 0.375rem;
   }
 
-  .detailWrap .detailInfo .moodType .moodTypeImg {
-    width: 1.5rem;
-    height: 1.5rem;
-  }
-  .detailWrap .detailInfo .moodType {
-    font-size: 0.875rem;
-  }
-  .detailWrap .detailInfo .detailDate {
-    font-size: 0.75rem;
-  }
-  .detailWrap h2 {
-    font-size: 1rem;
+  .detailWrap .detailInfo {
+    .moodType {
+      font-size: 0.875rem;
+      .moodTypeImg {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+    }
+    .detailDate {
+      font-size: 0.75rem;
+    }
   }
 
   .scrollBox {
@@ -113,13 +119,9 @@
   }
 
   .editWrap .diaryWrite .diaryContent input,
-  .editWrap .diaryWrite .buttonBox button {
+  .editWrap .diaryWrite .buttonBox button,
+  .commentWrap .commentInputWrap #commentInput {
     height: 40px;
-  }
-
-  .editWrap .diaryWrite .moodTypeRadio .radioWrap {
-    font-size: 14px;
-    flex-direction: column;
   }
 
   article.diaryWrite .moodTypeRadio {
@@ -127,6 +129,11 @@
     & > span {
       font-weight: 600;
       font-size: 20px;
+    }
+
+    .radioWrap {
+      font-size: 14px;
+      flex-direction: column;
     }
   }
 
