design: 반응형 수정

--- a/다이어리/diary-edit.css
+++ b/다이어리/diary-edit.css
@@ -369,6 +369,7 @@
   align-self: stretch;
   flex-wrap: wrap;
   padding-top: 0.75rem;
+  justify-content: space-between;
 }
 .comment_content {
   color: #000;
