--- a/다이어리/diary-detail.css
+++ b/다이어리/diary-detail.css
@@ -303,6 +303,7 @@ html {
   align-self: stretch;
   flex-wrap: wrap;
   padding-top: 0.75rem;
+  justify-content: space-between;
 }
 .comment_content {
   color: #000;
