[240904] CSS: [수정]  전체 - 상세 및 수정페이지 모바일 전환 시 가로 스크롤 생성 오류 수정

--- a/01-diary/detail/detail_1208.css
+++ b/01-diary/detail/detail_1208.css
@@ -1,6 +1,9 @@
 @media (max-width: 1208px) {
+    .root_container {
+        justify-content: center;
+    }
+    
     .header_container {
-        /* width: 100%; */
         align-items: flex-start;
     }
 
@@ -8,11 +11,35 @@
         width: 100%;
     }
 
+    .detail_section_container {
+        width: 100%;
+    }
+
     .main_contents_container {
         width: 100%;
     }
 
+    .main_contents_text_container {
+        width: 100%;
+    }
+
     .main_contents_article {
+        width: 100%;
+    }
+
+    .main_contents_title_contents {
+        width: 100%;
+    }
+
+    .main_contents_text_contents {
+        width: 100%;
+    }
+
+    .main_contents_text_title {
+        width: 100%;
+    }
+
+    .main_contents_text {
         width: 100%;
     }
 
